5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1616_2944.log
== TEST (2019-04-01 14:06:49) 
-- CODE:
npanquecas=float(input("numero:"))
novos=(npanquecas*1)
nleite=(npanquecas*180)
nfarinha=(npanquecas*110)
print(novos)
print(nleite)
print(nfarinha)
-- OUTPUT:
4.0
720.0
440.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:07:02) 
-- CODE:
npanquecas=float(input("numero:"))
novos=(npanquecas*1)
nleite=(npanquecas*180)
nfarinha=(npanquecas*110)
print(novos)
print(nleite)
print(nfarinha)
-- EXECUTION TIME:
0.143604
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
4.0
720.0
440.0
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
20.0
3600.0
2200.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:07:26) 
-- CODE:
npanquecas=float(input("numero:"))
novos=(npanquecas*1)
nleite=(npanquecas*180)
nfarinha=(npanquecas*110)
print(novos)
print(nleite)
print(nfarinha)
-- EXECUTION TIME:
0.161076
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
4.0
720.0
440.0
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
20.0
3600.0
2200.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:07:28) 
-- CODE:
npanquecas=float(input("numero:"))
novos=(npanquecas*1)
nleite=(npanquecas*180)
nfarinha=(npanquecas*110)
print(novos)
print(nleite)
print(nfarinha)
-- EXECUTION TIME:
0.210907
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
4.0
720.0
440.0
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
20.0
3600.0
2200.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:07:30) 
-- CODE:
npanquecas=float(input("numero:"))
novos=(npanquecas*1)
nleite=(npanquecas*180)
nfarinha=(npanquecas*110)
print(novos)
print(nleite)
print(nfarinha)
-- OUTPUT:
4.0
720.0
440.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:07:35) 
-- CODE:
npanquecas=float(input("numero:"))
novos=(npanquecas*1)
nleite=(npanquecas*180)
nfarinha=(npanquecas*110)
print(novos)
print(nleite)
print(nfarinha)
-- EXECUTION TIME:
0.188659
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
4.0
720.0
440.0
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
20.0
3600.0
2200.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:07:37) 
-- CODE:
npanquecas=float(input("numero:"))
novos=(npanquecas*1)
nleite=(npanquecas*180)
nfarinha=(npanquecas*110)
print(novos)
print(nleite)
print(nfarinha)
-- OUTPUT:
4.0
720.0
440.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:09:44) 
-- CODE:
npanquecas=float(input("numero:"))
novos=(npanquecas*1)

print(novos)

-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:43) 
-- CODE:
npanquecas=float(input("numero:"))
novos=(npanquecas*1)
nleite=(npanquecas*180)
nfarinha=(npanquecas*110)
print(novos)
print(nleite)
print(nfarinha)
-- OUTPUT:
4.0
720.0
440.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:18:15) 
-- CODE:
rint(1000/8)
-- EXECUTION TIME:
0.130858
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2944/main.py", line 1, in <module>
    rint(1000/8)
NameError: name 'rint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:16) 
-- CODE:
rint(1000/8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    rint(1000/8)
NameError: name 'rint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:19) 
-- CODE:
rint(1000/8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    rint(1000/8)
NameError: name 'rint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:28) 
-- CODE:
print(1000/8)
-- OUTPUT:
125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:57) 
-- CODE:
print(7*125/1000)
-- OUTPUT:
0.875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:50) 
-- CODE:
print(180/8)
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:54) 
-- CODE:
print(7*22.5/180)
-- OUTPUT:
0.875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:22:16) 
-- CODE:
print(7*22.5)
-- OUTPUT:
157.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:33) 
-- CODE:
print(110/8)
-- OUTPUT:
13.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:15) 
-- CODE:
print(7*13.7)
-- OUTPUT:
95.89999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:29) 
-- CODE:
print(7*13.75)
-- OUTPUT:
96.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:28:48) 
-- CODE:
panquecas=float(input("panquecas:"))
novos=(panquecas*125/1000)
leite=(panquecas*22.5)
farinha=(panquecas*13.75)
print(novos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
90.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:41) 
-- CODE:
panquecas=float(input(":"))
novos=(panquecas*125/1000)
leite=(panquecas*22.5)
farinha=(panquecas*13.75)
print(novos)
print(leite)
print(farinha)
-- OUTPUT:
0.5
90.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:29:51) 
-- CODE:
panquecas=float(input(":"))
novos=(panquecas*125/1000)
leite=(panquecas*22.5)
farinha=(panquecas*13.75)
print(novos)
print(leite)
print(farinha)
-- EXECUTION TIME:
0.152638
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
0.5
90.0
55.0
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
2.5
450.0
275.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
